[package]
name = "fentrail"
version = "0.1.0"
authors = ["icp <pangolin@vivaldi.net>"]
edition = "2021"
description = "CLI to build and query a KV-store of position and openings"
readme = "../README.md"
repository = "https://github.com/icp1994/fentrail/tree/master/cli"
license = "AGPL-3.0-or-later"
keywords = ["chess", "lichess"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
serde_json = "1.0.107"

libft = { version = "0.1.0",  path = "../api" }
