[package]
name = "serveft"
version = "0.1.0"
authors = ["icp <pangolin@vivaldi.net>"]
edition = "2021"
description = "Serve antecedent openings for a FEN payload"
readme = "../README.md"
repository = "https://github.com/icp1994/fentrail/tree/master/web"
license = "AGPL-3.0-or-later"
keywords = ["chess", "lichess"]
categories = ["web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
astra = "0.3.0"
serde_json = "1.0.107"

libft = { version = "0.1.0",  path = "../api" }
